# android-mp3-sonic-ndk

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: sonicjni.c  sonicjni.h
app/src/main/java/demo/arbuz/mp3sonicplayer/: MainActivity.java
app/src/main/java/demo/arbuz/mp3sonicplayer/audio/: AudioDecoder.java  AudioDevice.java  AudioPlayer.java  PlayerThread.java  SonicAudioDevice.java
app/src/main/java/org/vinuxproject/sonic/: Sonic.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
